--- a/1.1.2/index.html
+++ b/1.1.2/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive iFrame Browser</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="iFrameBrowser">
+    <link rel="apple-touch-icon" href="icon-192x192.png">
+</head>
+<body>
+    <div class="menu-bar">
+        <input type="text" id="url-input" placeholder="Enter URL">
+        <button id="go-button">Go</button>
+        <button id="settings-button">Settings</button>
+        <button id="toggle-mode">Toggle Dark Mode</button>
+        <button id="toggle-gradient">Toggle Gradient</button>
+    </div>
+    <iframe id="iframe-content" src="about:blank"></iframe>
+    <script src="script.js"></script>
+</body>
+</html>
 
